[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Towers/tower.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="Animation" id=2]
resource_name = "hideUI"

[sub_resource type="Animation" id=3]
resource_name = "showUI"

[node name="Tower" type="Position2D"]
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet" type="Position2D" parent="."]

[node name="Texture" type="Sprite" parent="Bullet"]

[node name="CanShotTimer" type="Timer" parent="."]

[node name="Range" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hideUI = SubResource( 2 )
anims/showUI = SubResource( 3 )

[connection signal="pressed" from="TextureButton" to="." method="_on_tower_pressed"]
[connection signal="timeout" from="CanShotTimer" to="." method="_on_CanShotTimer_timeout"]
[connection signal="area_entered" from="Range" to="." method="_on_enemy_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_enemy_exited"]
